stopped page-top from covering content

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ Layout styles
 	position: relative;
 	width: 85%;	
 	max-width: 1200px;
-	margin: 100px auto;
+	margin: 200px auto;
 }
 
 .flex-box {
